syntax = "proto3";

package protopb;

option go_package="gitlab.com\\bzholmyrza\\final-SA-Golang\\protopb;protopb";

message Song {
  int64 id = 1;
  string title = 2;
  string author = 3;
  string release_date = 4;
}

message CreateSongRequest{
  Song song = 1;
}

message CreateSongResponse{
  int32 id = 1;
}

message UpdateSongRequest{
  Song song = 1;
}

message UpdateSongResponse{
  int32 id = 1;
}

message DeleteSongRequest{
  int64 id = 1;
}

message DeleteSongResponse{}

message GetSongRequest{
  int32 id = 1;
}

message GetSongResponse{
  Song song = 1;
}

message GetAllSongsRequest{
  int32 id = 1;
}

message GetAllSongsResponse{
  Song song = 1;
}


service SongService {
  rpc CreateSong(CreateSongRequest) returns(CreateSongResponse) {};
  rpc UpdateSong(UpdateSongRequest) returns(UpdateSongResponse) {};
  rpc DeleteSong(DeleteSongRequest) returns(DeleteSongResponse) {};
  rpc GetSong(GetSongRequest) returns(GetSongResponse) {}
  rpc GetAllSongs(GetAllSongsRequest) returns(stream GetAllSongsResponse){};
}

